--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <script src="js/store-data.js"></script>
     <script src="js/index.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiXlAot-mwlliF1tcqvpnjvSmsrvX5ZbM&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=initMap">
     </script>
 </body>
 
